# raytracer-metalcpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  Resources.md  config.ini  scene.json  timeLog.csv  timelog.csv
blender/: uv_sphere_atmosphere.blend
cmake/: CMakeLists.txt  cuda.cmake  json.cmake  metal.cmake  openMP.cmake  sfml.cmake  stl_reader.cmake
definitions/: cuda.hpp  definitions.hpp  metal.hpp
include/: bitmap.h  camera.h  color.h  configservice.h  light.h  plane.h  raytracer.h  scene.h  sphere.h  vector3d.h
lib/: CMakeLists.txt
lib/metal-cmake/: CMakeLists.txt  definition.cpp
python/: .gitignore  rayTest.py  rayTracerRunner.py  requirements.txt  speedUpCalculator.py  speedVisualizer.py  speedupCalculator.py  timeLog.csv
scene/: 2d_plane.stl  Makefile  README.md  cube.stl  cube_invert.stl  cube_sphere.stl  ico_sphere.stl  monkey.stl  scene.json  scene_atmosphere.json  scene_monkey.json  scene_simple.json  scene_simple_atmosphere.json  scene_simple_dragon.json  uv_sphere_atmosphere.stl
shader/: CMakeLists.txt
shader/cuda/: CMakeLists.txt  shader_types.cuh  uvTest.cu
shader/metal/: CMakeLists.txt  intersect.metal  rayTest.metal  raytracer.metal  reflect.metal  shader_methods.hpp  shader_types.hpp  uv.metal
src/: Camera.hpp  Color.cpp  Color.hpp  Image.cpp  Image.hpp  Ray.cpp  Ray.hpp  RayTracableObject.cpp  RayTracableObject.hpp  RayTracer.cpp  RayTracer.hpp  RayTracing.cpp  RayTracing.hpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp  argumentsResolver.hpp  bitmap.c  camera.c  color.c  configservice.c  light.c  main.c  main.cpp  matrices.cpp  matrices.hpp  plane.c  random.hpp  ray.c  raytracer.c  scene.c  simples.cpp  simples.hpp  sphere.c  timing.cpp  timing.hpp  vector3d.c  (+1 more)
src/math/: matrices.cpp  matrices.hpp  vectors.hpp
src/raytrace_objects/: BoundigBox.hpp  LightSource.hpp  MeshedRayTraceableObject.cpp  MeshedRayTraceableObject.hpp  RayTracableObject.cpp  RayTracableObject.hpp  Sphere.hpp  SphereRayTraceableObject.hpp
src/raytracers/: CudaRayTracer.cpp  CudaRayTracer.hpp  MetalRaytracer.cpp  MetalRaytracer.hpp  OpenMPRayTracer.cpp  OpenMPRayTracer.hpp  OpenMPRaytracer.cpp  OpenMPRaytracer.hpp  RayTracerFactory.cpp  RayTracerFactory.hpp  SequentialRayTracer.cpp  SequentialRayTracer.hpp
template/include/: bitmap.h  light.h  ray.h
template/src/: light.c  main.c  raytracer.c  sphere.c
