if(USE_SHADER_METAL)
    add_subdirectory(metal)
    add_dependencies(${PROJECT_NAME} COPIED_METAL_SHADERS)
    include_directories(metal)
    source_group("MetalSources" ".*/\.metal")
endif ()

if(USE_SHADER_CUDA)
    add_subdirectory(cuda)
    add_dependencies(${PROJECT_NAME} COPIED_CUDA)
    source_group("CudaSources" ".*/\.cuda")
endif ()