if(USE_SHADER_METAL)
    add_subdirectory(metal)
    add_dependencies(${PROJECT_NAME} COPIED_METAL_SHADERS)
    include_directories(metal)
    source_group("MetalSources" ".*/\.metal")
endif ()

if(USE_SHADER_CUDA)
    add_subdirectory(cuda)
    include_directories(cuda)

    set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    target_link_libraries(${PROJECT_NAME} PRIVATE CUDA_SHADERS)
    source_group("CudaSources" ".*/\.cuda")
endif ()