
file(GLOB SHADER_SRC *.cu)
file(GLOB SHADER_HEADERS *.cuh)

add_compile_definitions(-G)
add_library(CUDA_SHADERS STATIC ${SHADER_SRC} ${SHADER_HEADERS})
target_compile_options(CUDA_SHADERS PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-g -G>)
set_target_properties(CUDA_SHADERS PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(CUDA_SHADERS PROPERTIES POSITION_INDEPENDENT_CODE ON)